--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <h4 class="titulo3">Entre em contato conosco!</h4>
         </div>
         <div class="alin-contato">
-            <form name="form1" action="#" method="post">
+            <form name="form1" action="#" method="get">
                 <div class="cont">
                     <input class="input-especial" type="text" placeholder="Nome" name="nome">
                     <input class="input-especial" type="text" placeholder="Email" name="email">
